fixed footer overlap with content

--- a/styles/base.less
+++ b/styles/base.less
@@ -114,7 +114,7 @@ body {
 	max-width:940px;
 	min-width:320px;
 	margin:0 auto;
-	padding:60px 20px 110px;
+	padding:60px 20px 180px;
 	position:relative;
 }
 
@@ -257,6 +257,7 @@ h1 {
 	bottom:0;
 	border-top:1px solid #ddd;
 	padding:0 0 10px;
+	background-color:#fbfbfb;
 	font-size:0.8em;
 	line-height:1.2;
 	.col {
@@ -277,6 +278,13 @@ h1 {
 		li { padding-left:20px; }
 		border-bottom:1px solid #ddd;
 		margin-bottom:10px;
+	}
+}
+
+@media only screen and (max-height: 560px) {
+	#footer {
+		position:static;
+		margin-top:20px;
 	}
 }
 
